--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -56,17 +56,20 @@
   @apply text-right text-xs text-gray-400 mt-1;
 }
 
-.grid {
-  @apply flex flex-wrap justify-between px-4;
+.gridSection {
+  @apply px-4;
+}
+
+.gridList {
+  @apply grid grid-cols-2 gap-3 pt-2;
 }
 
 .card {
-  @apply bg-white rounded-xl overflow-hidden shadow-sm mb-2;
-  width: 31%;
+  @apply bg-white rounded-xl overflow-hidden shadow-sm;
 }
 
 .cardImage {
-  @apply w-full h-24 object-cover;
+  @apply w-full h-36 object-cover;
 }
 
 .cardBody {
